deploy/k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-continuum-placement
  labels:
    app.kubernetes.io/name: global-continuum-placement
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: global-continuum-placement
  template:
    metadata:
      labels:
        app.kubernetes.io/name: global-continuum-placement
    spec:
      containers:
      - name: app
        image: ryaxtech/global-continuum-placement:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-api
---
apiVersion: v1
kind: Service
metadata:
  name: global-continuum-placement
spec:
  selector:
    app.kubernetes.io/name: global-continuum-placement
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-continuum-placement
spec:
  rules:
  - host: global-continuum-placement.apps.ocphub.physics-faas.eu
    http:
      paths:
      - backend:
          service:
            name: global-continuum-placement
            port:
              name: http
        path: /
        pathType: Exact
